--- a/ProyectoSAGLAM-war/web/login.xhtml
+++ b/ProyectoSAGLAM-war/web/login.xhtml
@@ -47,32 +47,31 @@
 
                         <center><strong><h:outputText value="Ingrese la informacion del nuevo usuario" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
-                        <strong><h:outputText value="Nombres: " style="position: absolute; left: 50px; top: 70px;"/></strong>
+                        <strong><h:outputText value="Nombres: " style="position: absolute; left: 50px; top: 77px;"/></strong>
                         <p:inputText id="nuevoUsuarioNombre" value="#{controlLogin.nuevoUsuarioRegistrar.nombres}"  style="position: absolute; left: 200px; top: 75px">
                             <p:ajax event="change" update="@this" process="@this"/>
                         </p:inputText>
 
-                        <strong><h:outputText value="Apellidos: " style="position: absolute; left: 50px; top: 110px;"/></strong>
+                        <strong><h:outputText value="Apellidos: " style="position: absolute; left: 50px; top: 115px;"/></strong>
                         <p:inputText id="nuevoUsuarioApellido" value="#{controlLogin.nuevoUsuarioRegistrar.apellidos}"  style="position: absolute; left: 200px; top: 115px">
                             <p:ajax event="change" update="@this" process="@this"/>
                         </p:inputText>
 
-                        <strong><h:outputText value="Correo Electronico: " style="position: absolute; left: 50px; top: 150px;"/></strong>
+                        <strong><h:outputText value="Correo Electronico: " style="position: absolute; left: 50px; top: 155px;"/></strong>
                         <p:inputText id="nuevoUsuarioCorreo" value="#{controlLogin.nuevoUsuarioRegistrar.correoelectronico}"  style="position: absolute; left: 200px; top: 155px">
                             <p:ajax event="change" update="@this" process="@this"/>
                         </p:inputText>
 
-                        <strong><h:outputText value="N# Documento: " style="position: absolute; left: 50px; top: 190px;"/></strong>
+                        <strong><h:outputText value="N# Documento: " style="position: absolute; left: 50px; top: 195px;"/></strong>
                         <p:inputText id="nuevoUsuarioDocumento" value="#{controlLogin.nuevoUsuarioRegistrar.numerodocumento}"  style="position: absolute; left: 200px; top: 195px">
                             <p:ajax event="change" update="@this" process="@this"/>
                         </p:inputText>
 
-                        <strong><h:outputText value="Contraseña: " style="position: absolute; left: 50px; top: 230px;"/></strong>
+                        <strong><h:outputText value="Contraseña: " style="position: absolute; left: 50px; top: 235px;"/></strong>
                         <p:password id="nuevoUsuarioContrasena" value="#{controlLogin.nuevoUsuarioRegistrar.contrasena}"  style="position: absolute; left: 200px; top: 235px">
-                            <p:ajax event="change" update="@this" process="@this"/>
                         </p:password>
 
-                        <strong><h:outputText value="Tipo Usuario: " style="position: absolute; left: 50px; top: 270px;"/></strong>
+                        <strong><h:outputText value="Tipo Usuario: " style="position: absolute; left: 50px; top: 275px;"/></strong>
                         <p:selectOneMenu id="nuevoUsuarioTipoUsuario" value="#{controlLogin.nuevoUsuarioRegistrar.tipousuario}" style="position: absolute; left: 200px; top: 275px">
                             <f:selectItem itemLabel="Seleccione T.U." itemValue="" />
                             <f:selectItem itemLabel="ESTUDIANTE" itemValue="ESTUDIANTE" />
@@ -108,17 +107,17 @@
                     </p:dialog>
 
 
-                    <p:dialog id="loginUsuario"  header="Informacion" widgetVar="loginUsuario"  resizable="false" draggable="false" modal="true" height="150" width="350" style="font-size: 12px" closable="false">  
-                        <h:outputText value="Ingrese las credenciales del usuario" style="position: absolute; left: 20px; top: 15px; width: 185px; font-weight:bold; color: darkblue"/>
+                    <p:dialog id="loginUsuario"  header="Informacion" widgetVar="loginUsuario"  resizable="false" draggable="false" modal="true" height="150" width="400" style="font-size: 12px" closable="false">  
+                        
+                        <center><strong><h:outputText value="Ingrese las credenciales del usuario" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
-                        <h:outputText value="Correo Electronico: " style="position: absolute; top: 40px; left: 30px;"/>
+                        <h:outputText value="Correo Electronico: " style="position: absolute; top: 45px; left: 30px;"/>
                         <p:inputText id="correoLogin" value="#{controlLogin.contrasena}" style="position: absolute; top: 45px; left: 200px">
                             <p:ajax event="change" process="@this" update="@this"/>
                         </p:inputText>
 
-                        <h:outputText value="Contraseña: " style="position: absolute; top: 70px; left: 30px;"/>
+                        <h:outputText value="Contraseña: " style="position: absolute; top: 75px; left: 30px;"/>
                         <p:password id="contrasenaLogin" value="#{controlLogin.contrasena}" style="position: absolute; top: 75px; left: 200px">
-                            <p:ajax event="change" process="@this" update="@this"/>
                         </p:password>
 
                         <p:commandButton value="Aceptar" style="position: absolute; top: 120px; left: 200px" actionListener="#{controlLogin.loginUsuario()}" process="@this"/>
@@ -126,17 +125,17 @@
 
                     </p:dialog>
 
-                    <p:dialog id="recuperarContrasena"  header="Informacion" widgetVar="recuperarContrasena"  resizable="false" draggable="false" modal="true" height="150" width="350" style="font-size: 12px" closable="false">  
-                        <h:outputText value="Ingrese las credenciales del usuario" style="position: absolute; left: 20px; top: 15px; width: 185px; font-weight:bold; color: darkblue"/>
+                    <p:dialog id="recuperarContrasena"  header="Informacion" widgetVar="recuperarContrasena"  resizable="false" draggable="false" modal="true" height="150" width="400" style="font-size: 12px" closable="false">  
+                        
+                        <center><strong><h:outputText value="Ingrese las credenciales del usuario" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
-                        <h:outputText value="Correo Electronico: " style="position: absolute; top: 40px; left: 30px;"/>
+                        <h:outputText value="Correo Electronico: " style="position: absolute; top: 45px; left: 30px;"/>
                         <p:inputText id="correoRecuperar" value="#{controlLogin.contrasena}" style="position: absolute; top: 45px; left: 200px">
                             <p:ajax event="change" process="@this" update="@this"/>
                         </p:inputText>
 
-                        <h:outputText value="N# Documento: " style="position: absolute; top: 70px; left: 30px;"/>
+                        <h:outputText value="N# Documento: " style="position: absolute; top: 75px; left: 30px;"/>
                         <p:inputText id="contrasenaRecuperar" value="#{controlLogin.numDocumento}" style="position: absolute; top: 75px; left: 200px">
-                            <p:ajax event="change" process="@this" update="@this"/>
                         </p:inputText>
 
                         <p:commandButton value="Aceptar" style="position: absolute; top: 120px; left: 200px" actionListener="#{controlLogin.recuperarContrasenaUsuario()}" process="@this"/>
