--- a/ProyectoSAGLAM-war/web/bloquearusuario.xhtml
+++ b/ProyectoSAGLAM-war/web/bloquearusuario.xhtml
@@ -47,23 +47,46 @@
                                          >
                                 <p:ajax event="filter" listener="#{controlBloquearUsuario.eventoFiltrar()}"/>
 
-                                <p:column headerText="Correo Electronico" sortBy="#{info.correoelectronico}" filterBy="#{info.correoelectronico}" filterMatchMode="contains" id="codigo" width="30" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column headerText="Nombres"  sortBy="#{info.nombres}" filterBy="#{info.nombres}" filterMatchMode="contains" id="nombre" width="130" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
-                                        <f:facet name="output"><h:outputText value="#{info.correoelectronico}" /></f:facet>  
+                                        <f:facet name="output"><h:outputText value="#{info.nombres}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.correoelectronico}" maxlength="4" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.nombres}"  id="editarNombres" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlBloquearUsuario.cambiarIndice(indice, 0)}" process="@this"/> 
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
 
                                 </p:column>
-                                <p:column headerText="Número Documento" sortBy="#{info.numerodocumento}" filterBy="#{info.numerodocumento}" filterMatchMode="contains" id="descripcion" width="160" filterStyle="display: none; visibility: hidden;" >                                  
+
+                                <p:column headerText="Apellidos"  sortBy="#{info.apellidos}" filterBy="#{info.apellidos}" filterMatchMode="contains" id="apellido" width="130" filterStyle="display: none; visibility: hidden;" >                                  
+                                    <p:cellEditor>  
+                                        <f:facet name="output"><h:outputText value="#{info.apellidos}" /></f:facet>  
+                                        <f:facet name="input">
+                                            <p:inputText value="#{info.apellidos}"  id="editarApellidos" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
+                                                <p:ajax event="select" listener="#{controlBloquearUsuario.cambiarIndice(indice, 1)}" process="@this"/> 
+                                            </p:inputText>
+                                        </f:facet>  
+                                    </p:cellEditor>
+
+                                </p:column>
+                                <p:column headerText="N. Documento" sortBy="#{info.numerodocumento}" filterBy="#{info.numerodocumento}" filterMatchMode="contains" id="documento" width="60" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText style="text-transform: uppercase" value="#{info.numerodocumento}"  /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.numerodocumento}" maxlength="40" id="editarNombre" style="height: 12px;  border-radius: 0px; width: 99%; text-transform: uppercase"  > 
-                                                <p:ajax event="select" listener="#{controlBloquearUsuario.cambiarIndice(indice, 1)}" process="@this"/> 
+                                            <p:inputText value="#{info.numerodocumento}" maxlength="40" id="editarDocumento" style="height: 12px;  border-radius: 0px; width: 99%; text-transform: uppercase"  > 
+                                                <p:ajax event="select" listener="#{controlBloquearUsuario.cambiarIndice(indice, 2)}" process="@this"/> 
+                                            </p:inputText>
+                                        </f:facet>  
+                                    </p:cellEditor>
+
+                                </p:column>
+                                <p:column headerText="Tipo Usuario" sortBy="#{info.tipousuario}" filterBy="#{info.tipousuario}" filterMatchMode="contains" id="tipousuario" width="60" filterStyle="display: none; visibility: hidden;" >                                  
+                                    <p:cellEditor>  
+                                        <f:facet name="output"><h:outputText style="text-transform: uppercase" value="#{info.tipousuario}"  /></f:facet>  
+                                        <f:facet name="input">
+                                            <p:inputText value="#{info.tipousuario}" maxlength="40" id="editarNombre" style="height: 12px;  border-radius: 0px; width: 99%; text-transform: uppercase"  > 
+                                                <p:ajax event="select" listener="#{controlBloquearUsuario.cambiarIndice(indice, 3)}" process="@this"/> 
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
