--- a/ProyectoSAGLAM-war/web/prestamos.xhtml
+++ b/ProyectoSAGLAM-war/web/prestamos.xhtml
@@ -15,7 +15,7 @@
 
                     <p:panel  id="PanelOpciones" header="Opciones" style="position: absolute; top: 120px; left: 100px; width: 200px; height: 450px;font-size: 12px" > 
 
-                        <p:commandButton id="RESERVAR" value="Reservar" style="position: absolute; top: 50px; left: 10px; width: 190px; text-align: center" disabled="#{controlLogin.permisoReservar}"  process="@this"/>
+                        <p:commandButton id="RESERVAR" value="Reservar" style="position: absolute; top: 50px; left: 10px; width: 190px; text-align: center" disabled="#{controlLogin.permisoReservar}"  process="@this" action="reservaareatrabajo" actionListener="#{controlReservaAreaTrabajo.recibiriUsuarioConectado(controlPrestamos.usuarioLogin.secuencia)}" />
                         <p:commandButton id="PRESTAMOS" value="Prestamos" style="position: absolute; top: 90px; left: 10px; width: 190px; text-align: center" disabled="true" actionListener="#{controlPrestamos.recibiriUsuarioConectado(controlPrestamos.usuarioLogin.secuencia)}" action="prestamos" process="@this"/>
                         <p:commandButton id="DOC_PRACTICAS" value="Doc. Practicas" style="position: absolute; top: 130px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamos.permisoDocPracticas}"  process="@this" actionListener="#{controlResultadosActividades.recibiriUsuarioConectado(controlPrestamos.usuarioLogin.secuencia)}" action="resultadosactividades"/>
                         <p:commandButton id="GUIAS" value="Guias Laboratorio" style="position: absolute; top: 170px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamos.permisoGuias}"  process="@this" />
@@ -23,7 +23,7 @@
                         <p:commandButton id="USUARIO" value="Usuario" style="position: absolute; top: 250px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamos.permisoUsuario}"  process="@this"/>
                         <p:commandButton id="MATERIA" value="Asociar Materias" style="position: absolute; top: 290px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamos.permisoMateria}"  process="@this" action="asociarmateriausuario" actionListener="#{controlAsociarMateriaUsuario.recibiriUsuarioConectado(controlPrestamos.usuarioLogin.secuencia)}"/>
                         <p:commandButton id="AREAS_LAB" value="Laboratorio" style="position: absolute; top: 330px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamos.permisoLaboratorio}" process="@this" action="areatrabajo" actionListener="#{controlAreaTrabajo.recibiriUsuarioConectado(controlPrestamos.usuarioLogin.secuencia)}"/>
-                        <p:commandButton id="CERRAR_SESION" value="Cerrar Sesion" style="position: absolute; top: 370px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamos.permisoCerrarSesion}" actionListener="#{controlLogin.cerrarSesion()}"  process="@this"/>
+                        <p:commandButton id="CERRAR_SESION" value="Cerrar Sesion" style="position: absolute; top: 370px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamos.permisoCerrarSesion}" actionListener="#{controlLogin.cerrarSesion()}"  process="@this" action="login"/>
 
                     </p:panel>
 
