--- a/ProyectoSAGLAM-war/web/prestamosusuario.xhtml
+++ b/ProyectoSAGLAM-war/web/prestamosusuario.xhtml
@@ -16,7 +16,7 @@
 
                     <p:panel  id="PanelOpciones" header="Opciones" style="position: absolute; top: 120px; left: 100px; width: 200px; height: 450px;font-size: 12px" > 
 
-                        <p:commandButton id="RESERVAR" value="Reservar" style="position: absolute; top: 50px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamosUsuario.permisoReservar}"  process="@this"/>
+                        <p:commandButton id="RESERVAR" value="Reservar" style="position: absolute; top: 50px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamosUsuario.permisoReservar}"  process="@this" action="reservaareatrabajo" actionListener="#{controlReservaAreaTrabajo.recibiriUsuarioConectado(controlPrestamosUsuario.usuarioLogin.secuencia)}" />
                         <p:commandButton id="PRESTAMOS" value="Prestamos" style="position: absolute; top: 90px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamosUsuario.permisoPrestamo}" actionListener="#{controlPrestamos.recibiriUsuarioConectado(controlPrestamosUsuario.usuarioLogin.secuencia)}" action="prestamos" process="@this"/>
                         <p:commandButton id="DOC_PRACTICAS" value="Doc. Practicas" style="position: absolute; top: 130px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamosUsuario.permisoDocPracticas}"  process="@this" actionListener="#{controlResultadosActividades.recibiriUsuarioConectado(controlPrestamosUsuario.usuarioLogin.secuencia)}" action="resultadosactividades"/>
                         <p:commandButton id="GUIAS" value="Guias Laboratorio" style="position: absolute; top: 170px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamosUsuario.permisoGuias}"  process="@this" />
@@ -24,7 +24,7 @@
                         <p:commandButton id="USUARIO" value="Usuario" style="position: absolute; top: 250px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamosUsuario.permisoUsuario}"  process="@this"/>
                         <p:commandButton id="MATERIA" value="Asociar Materias" style="position: absolute; top: 290px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamosUsuario.permisoMateria}"  process="@this" action="asociarmateriausuario" actionListener="#{controlAsociarMateriaUsuario.recibiriUsuarioConectado(controlPrestamosUsuario.usuarioLogin.secuencia)}"/>
                         <p:commandButton id="AREAS_LAB" value="Laboratorio" style="position: absolute; top: 330px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamosUsuario.permisoLaboratorio}" process="@this" action="areatrabajo" actionListener="#{controlAreaTrabajo.recibiriUsuarioConectado(controlPrestamosUsuario.usuarioLogin.secuencia)}"/>
-                        <p:commandButton id="CERRAR_SESION" value="Cerrar Sesion" style="position: absolute; top: 370px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamosUsuario.permisoCerrarSesion}" actionListener="#{controlLogin.cerrarSesion()}"  process="@this"/>
+                        <p:commandButton id="CERRAR_SESION" value="Cerrar Sesion" style="position: absolute; top: 370px; left: 10px; width: 190px; text-align: center" disabled="#{controlPrestamosUsuario.permisoCerrarSesion}" actionListener="#{controlLogin.cerrarSesion()}"  process="@this" action="login"/>
 
                     </p:panel>
 
